--- a/Exercise CSS Box Model and Typography/Resources/08/component-button.html
+++ b/Exercise CSS Box Model and Typography/Resources/08/component-button.html
@@ -15,7 +15,7 @@
         <button class="button-orange">Click Me!</button>
         <button class="button-yellow">Click Me!</button>
         <button class="button-white">Click Me!</button>
-        <button class="button grey edit button"><i class="fas fa-edit"></i> Edit</button>
+        <button class="button-grey-edit-button"><i class="fas fa-edit"></i> Edit</button>
     </div>
     
 </body>
